[STRUCTURE] Review structure and split in two separate projects.

--- a/JAVA/pom.xml
+++ b/JAVA/pom.xml
@@ -20,7 +20,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
+		<java.version>1.7</java.version>
+		<start-class>com.benjd90.photos2.DemoApplication</start-class>
 	</properties>
 
 	<dependencies>
