--- a/JAVA/pom.xml
+++ b/JAVA/pom.xml
@@ -49,6 +49,13 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.drewnoakes</groupId>
+			<artifactId>metadata-extractor</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+
 	</dependencies>
 	
 	<build>
