--- a/JAVA/pom.xml
+++ b/JAVA/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
 
 		<dependency>
 			<groupId>com.drewnoakes</groupId>
@@ -56,6 +61,11 @@
 			<version>2.8.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.1.5</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
