[JAVA] List all photos and store it as json in a file as PhotosListStorage

--- a/JAVA/src/main/resources/config.properties
+++ b/JAVA/src/main/resources/config.properties
@@ -1,3 +1,5 @@
-path=D:/PHOTOS/
+path=D:/PHOTOS
 photosExtensions=jpg;jpeg;png
 version=${project.version}
+appFilesDir=C:/temp/ExplorateurPhotos2/
+listPhotosFileName=listPhotos.json
