--- a/JAVA/src/main/resources/config.properties
+++ b/JAVA/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-path=D:/PHOTOS
+path=D:/PHOTOS/chats
 photosExtensions=jpg;jpeg;png
 version=${project.version}
 appFilesDir=C:/temp/ExplorateurPhotos2/
