--- a/HTML/bower.json
+++ b/HTML/bower.json
@@ -11,7 +11,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-vs-repeat": "^1.1.6"
+    "angular-vs-repeat": "^1.1.6",
+    "angular-bootstrap": "^1.2.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
