[JAVA] Add thumbnail cache management

--- a/JAVA/src/main/resources/config.properties
+++ b/JAVA/src/main/resources/config.properties
@@ -1,5 +1,6 @@
-path=D:/PHOTOS
+path=D:\\PHOTOS\\chats
 photosExtensions=jpg;jpeg;png
 version=${project.version}
 appFilesDir=C:/temp/ExplorateurPhotos2/
+cacheDir=cacheThumbnail
 listPhotosFileName=listPhotos.json
