[JAVA] Add file add/delete/edit detection

--- a/JAVA/src/main/resources/config.properties
+++ b/JAVA/src/main/resources/config.properties
@@ -3,4 +3,8 @@ photosExtensions=jpg;jpeg;png
 version=${project.version}
 appFilesDir=C:/temp/ExplorateurPhotos2/
 cacheDir=cacheThumbnail
+
 listPhotosFileName=listPhotos.json
+isRunningFileName=isRunning.txt
+
+thumbnailHeight=150
