--- a/HTML/bower.json
+++ b/HTML/bower.json
@@ -13,7 +13,8 @@
     "angular-touch": "^1.3.0",
     "angular-vs-repeat": "^1.1.6",
     "angular-bootstrap": "^1.2.4",
-    "angular-snap": "~1.8.5"
+    "angular-snap": "~1.8.5",
+    "angular-i18n": "~1.5.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
