[JAVA] Add config for scheduler

--- a/JAVA/src/main/resources/config.properties
+++ b/JAVA/src/main/resources/config.properties
@@ -7,4 +7,7 @@ cacheDir=cacheThumbnail
 listPhotosFileName=listPhotos.json
 isRunningFileName=isRunning.txt
 
+#every Wednesday at 3h0min0s
+cronScheduler=0 0 3 ? * WED
+
 thumbnailHeight=150
