[JAVA HTML] Add server config

--- a/JAVA/src/main/resources/config.properties
+++ b/JAVA/src/main/resources/config.properties
@@ -1,7 +1,10 @@
-path=D:\\PHOTOS\\chats
+path=D:\\PHOTOS\\Chats
+#path=/media/89bac81e-1cb1-436a-9a0c-2edeeb888cee/lost+found/Photos
 photosExtensions=jpg;jpeg;png
 version=${project.version}
 appFilesDir=C:/temp/ExplorateurPhotos2/
+#appFilesDir=/media/89bac81e-1cb1-436a-9a0c-2edeeb888cee/lost+found/ExplorateurPhotos2/
+
 cacheDir=cacheThumbnail
 
 listPhotosFileName=listPhotos.json
