--- a/HTML/bower.json
+++ b/HTML/bower.json
@@ -14,7 +14,8 @@
     "angular-vs-repeat": "^1.1.6",
     "angular-bootstrap": "^1.2.4",
     "angular-snap": "~1.8.5",
-    "angular-i18n": "~1.5.5"
+    "angular-i18n": "~1.5.5",
+    "angular-ui-router": "~0.2.18"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
