--- a/HTML/bower.json
+++ b/HTML/bower.json
@@ -15,7 +15,8 @@
     "angular-bootstrap": "^1.2.4",
     "angular-snap": "~1.8.5",
     "angular-i18n": "~1.5.5",
-    "angular-ui-router": "~0.2.18"
+    "angular-ui-router": "~0.2.18",
+    "angular-loading-bar": "~0.9.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
